--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,7 +13,7 @@ jobs:
     - name: Publish to Astronomer.io
       uses: elgohr/Publish-Docker-Github-Action@2.6
       with:
-        name: ckmzjm22937931d35puw3tcdo/theoretical-meteoroid-4280:${tag}
+        name: ckmzjm22937931d35puw3tcdo/theoretical-meteoroid-4280:${{ env.tag }}
         username: QdFnVDgr4RmQOcBqxNd3MlNDO5QxAvV9
         password: 8lqYzBu2WDnlPiLfAHiKt8PIXTzlBWdQmg6DatSSIpvSqFK4Ro4Q8o12v3kfPocK
         registry: images.astronomer-dev.cloud
