--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -31,5 +31,5 @@ jobs:
             "grant_type":"client_credentials"
         }' | jq '.access_token' )
         echo "::set-output name=auth_token::$token"
-    - run: echo ${{ steps.token.outputs.auth_token }
+    - run: echo ${{ steps.token.outputs.auth_token }}
         
