--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,12 +24,7 @@ jobs:
       run: |
         token=$( curl --location --request POST 'https://auth.astronomer-dev.io/oauth/token' \
         --header 'content-type: application/json' \
-        --data-raw '{
-            "client_id": "QdFnVDgr4RmQOcBqxNd3MlNDO5QxAvV9",
-            "client_secret": "QdFnVDgr4RmQOcBqxNd3MlNDO5QxAvV9",
-            "audience": "astronomer-ee",
-            "grant_type":"client_credentials"
-        }' | jq '.access_token' )
+        --data-raw '{ "client_id": "QdFnVDgr4RmQOcBqxNd3MlNDO5QxAvV9","client_secret": "QdFnVDgr4RmQOcBqxNd3MlNDO5QxAvV9","audience": "astronomer-ee","grant_type":"client_credentials"}' | jq '.access_token' )
         echo "::set-output name=auth_token::$token"
     - run: echo ${{ steps.token.outputs.auth_token }}
         
