--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,8 +22,8 @@ jobs:
     - name: Get auth token
       id: token
       run: |
-        token=$( curl --location --request POST 'https://auth.astronomer-dev.io/oauth/token' --header 'content-type: application/json' --data-raw '{ "client_id": "QdFnVDgr4RmQOcBqxNd3MlNDO5QxAvV9","client_secret": "8lqYzBu2WDnlPiLfAHiKt8PIXTzlBWdQmg6DatSSIpvSqFK4Ro4Q8o12v3kfPocK","audience": "astronomer-ee","grant_type":"client_credentials"}' | jq '.access_token' )
+        token=$( curl --location --request POST 'https://auth.astronomer-dev.io/oauth/token' \
+        --header 'content-type: application/json' \
+        --data-raw '{ "client_id": "QdFnVDgr4RmQOcBqxNd3MlNDO5QxAvV9","client_secret": "8lqYzBu2WDnlPiLfAHiKt8PIXTzlBWdQmg6DatSSIpvSqFK4Ro4Q8o12v3kfPocK","audience": "astronomer-ee","grant_type":"client_credentials"}' | jq '.access_token' )
         echo "::set-output name=auth_token::$token"
-        echo $token
     - run: echo ${{ steps.token.outputs.auth_token }}
-        
