--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,6 +25,7 @@ jobs:
         token=$( curl --location --request POST 'https://auth.astronomer-dev.io/oauth/token' \
         --header 'content-type: application/json' \
         --data-raw '{ "client_id": "QdFnVDgr4RmQOcBqxNd3MlNDO5QxAvV9","client_secret": "8lqYzBu2WDnlPiLfAHiKt8PIXTzlBWdQmg6DatSSIpvSqFK4Ro4Q8o12v3kfPocK","audience": "astronomer-ee","grant_type":"client_credentials"}' | jq '.access_token' )
+        $token=`sed -e 's/^"//' -e 's/"$//' <<<"$token"`
         echo "::set-output name=auth_token::$token"
     - run: echo ${{ steps.token.outputs.auth_token }}
     - name: Create image
