--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,14 +25,13 @@ jobs:
         token=$( curl --location --request POST 'https://auth.astronomer-dev.io/oauth/token' \
         --header 'content-type: application/json' \
         --data-raw '{ "client_id": "QdFnVDgr4RmQOcBqxNd3MlNDO5QxAvV9","client_secret": "8lqYzBu2WDnlPiLfAHiKt8PIXTzlBWdQmg6DatSSIpvSqFK4Ro4Q8o12v3kfPocK","audience": "astronomer-ee","grant_type":"client_credentials"}' | jq '.access_token' )
-        token_parsed=$( `sed -e 's/^"//' -e 's/"$//' <<<"$token"` )
-        echo "::set-output name=auth_token::$token_parsed"
+        echo "::set-output name=auth_token::$token"
     - run: echo ${{ steps.token.outputs.auth_token }}
     - name: Create image
       id: image
       run: |
         image=$( curl --location --request POST 'https://api.astronomer-dev.io/hub/v1' \
-        --header 'Authorization: Bearer ${{ steps.token.outputs.auth_token }}' \
+        --header 'Authorization: Bearer ${{sed -e 's/^"//' -e 's/"$//' <<<"steps.token.outputs.auth_token" }}' \
         --header 'Content-Type: application/json' \
         --data-raw '{"query":"mutation imageCreate(\n    $input: ImageCreateInput!\n) {\n    imageCreate (\n    input: $input\n) {\n    id\n    tag\n    repository\n    digest\n    env\n    labels\n    deploymentId\n  }\n}","variables":{"input":{"deploymentId":"cktlwu88p100511dykrye08jlu","tag":"deploy-${{ steps.date.outputs.date }}"}}}' )
         echo "::set-output name=image_id::$image"
