--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,9 +24,7 @@ jobs:
       run: |
         token=$( curl --location --request POST 'https://auth.astronomer-dev.io/oauth/token' \
         --header 'content-type: application/json' \
-        --data-raw '{ "client_id": "QdFnVDgr4RmQOcBqxNd3MlNDO5QxAvV9","client_secret": \
-        "8lqYzBu2WDnlPiLfAHiKt8PIXTzlBWdQmg6DatSSIpvSqFK4Ro4Q8o12v3kfPocK","audience": \
-        "astronomer-ee","grant_type":"client_credentials"}' | jq -r '.access_token' )
+        --data-raw '{ "client_id": "QdFnVDgr4RmQOcBqxNd3MlNDO5QxAvV9","client_secret": "8lqYzBu2WDnlPiLfAHiKt8PIXTzlBWdQmg6DatSSIpvSqFK4Ro4Q8o12v3kfPocK","audience": "astronomer-ee","grant_type":"client_credentials"}' | jq -r '.access_token' )
         echo "::set-output name=auth_token::$token"
     - run: echo ${{ steps.token.outputs.auth_token }}
     - name: Create image
@@ -35,10 +33,7 @@ jobs:
         image=$( curl --location --request POST 'https://api.astronomer-dev.io/hub/v1' \
         --header 'Authorization: Bearer ${{ steps.token.outputs.auth_token }}' \
         --header 'Content-Type: application/json' \
-        --data-raw '{"query":"mutation imageCreate(\n    $input: ImageCreateInput!\n) {\n    \
-        imageCreate (\n    input: $input\n) {\n    id\n    tag\n    repository\n    digest\n    \
-        env\n    labels\n    deploymentId\n  }\n}","variables":{"input":{"deploymentId":"cktlwu88p100511dykrye08jlu"\
-        ,"tag":"deploy-${{ steps.date.outputs.date }}"}}}' | jq -r '.data.imageCreate.id')
+        --data-raw '{"query":"mutation imageCreate(\n    $input: ImageCreateInput!\n) {\n    imageCreate (\n    input: $input\n) {\n    id\n    tag\n    repository\n    digest\n    env\n    labels\n    deploymentId\n  }\n}","variables":{"input":{"deploymentId":"cktlwu88p100511dykrye08jlu","tag":"deploy-${{ steps.date.outputs.date }}"}}}' | jq -r '.data.imageCreate.id')
         echo "::set-output name=image_id::$image"
     - run: echo ${{ steps.image.outputs.image_id }}
     - name: Deploy image
@@ -46,8 +41,4 @@ jobs:
         curl --location --request POST 'https://api.astronomer-dev.io/hub/v1' \
         --header 'Authorization: Bearer ${{ steps.token.outputs.auth_token }}' \
         --header 'Content-Type: application/json' \
-        --data-raw '{"query":"mutation imageDeploy(\n    $input: ImageDeployInput!\n  ) \
-        {\n    imageDeploy(\n      input: $input\n    ) {\n      id\n      deploymentId\n      \
-        digest\n      env\n      labels\n      name\n      tag\n      repository\n    \
-        }\n}","variables":{"input":{"id":"${{ steps.image.outputs.image_id }}","tag":\
-        "deploy-${{ steps.date.outputs.date }}","repository":"images.astronomer-dev.cloud/ckmzjm22937931d35puw3tcdo/cktlwu88p100511dykrye08jlu"}}}'
+        --data-raw '{"query":"mutation imageDeploy(\n    $input: ImageDeployInput!\n  ) {\n    imageDeploy(\n      input: $input\n    ) {\n      id\n      deploymentId\n      digest\n      env\n      labels\n      name\n      tag\n      repository\n    }\n}","variables":{"input":{"id":"${{ steps.image.outputs.image_id }}","tag":"deploy-${{ steps.date.outputs.date }}","repository":"images.astronomer-dev.cloud/ckmzjm22937931d35puw3tcdo/cktlwu88p100511dykrye08jlu"}}}'
