--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,8 +19,8 @@ jobs:
       uses: elgohr/Publish-Docker-Github-Action@2.6
       with:
         name: ${{ env.ORGANIZATION_ID }}/${{ env.DEPLOYMENT_ID }}:deploy-${{ steps.date.outputs.date }}
-        username: ${{ env.CLIENT_ID }}
-        password: ${{ env.CLIENT_SECRET }}
+        username: ${{ secrets.CLIENT_ID }}
+        password: ${{ secrets.CLIENT_SECRET }}
         registry: images.astronomer-dev.cloud
 
     - name: Get auth token
@@ -28,7 +28,7 @@ jobs:
       run: |
         token=$( curl --location --request POST 'https://auth.astronomer-dev.io/oauth/token' \
         --header 'content-type: application/json' \
-        --data-raw '{ "client_id": "${{ env.CLIENT_ID }}","client_secret": "${{ env.CLIENT_SECRET }}","audience": "astronomer-ee","grant_type":"client_credentials"}' | jq -r '.access_token' )
+        --data-raw '{ "client_id": "${{ secrets.CLIENT_ID }}","client_secret": "${{ secrets.CLIENT_SECRET }}","audience": "astronomer-ee","grant_type":"client_credentials"}' | jq -r '.access_token' )
         echo "::set-output name=auth_token::$token"
 
     - name: Create image
